# data_structures

./: 1_13.c  1_13.h  2_2.c  2_3.c  2_3.h  2_5.c  2_5.h  3_3.c  3_4.c  3_5.c  3_6.c  3_7.c  4_1.c  4_1.h  4_1_functions.c  4_1_functions.h  4_1_helper.c  4_1_helper.h  5_1.c  5_2.c  CMakeLists.txt  README.md  algorithms.c  algorithms.h  data_structures.h  input.h  main.c  makefile  test.c
